# GPU-FABIPB

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  PLANS.md  README.md  coulomb  coulomb.c  direct.c  expan.c  fmm.c  gk.h  gkDisplay.c  gkGlobal.c  gkGlobal.h  gkSetup.c  input.c  kernel.c  moments.c  numQuad.c  solver.c  triangles.txt
docs/: dependencies.md
include/: f2c.h  gk.h  gkGlobal.h  gmres.h  gpu_backend.h
scripts/: run_apples_to_apples.sh
src/: coulomb.c  expan.c  fmm.c  gkGlobal.c  gmres.c  gpu_backend_cuda.cu  gpu_backend_stub.c  input.c  numQuad.c
